--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "chai": "~1.9.1",
     "mocha": "~1.19.0",
     "sinon": "~1.10.0",
-    "istanbul": "~0.2.10"
+    "istanbul": "~0.2.10",
+    "grunt": "~0.4.5",
+    "grunt-docco": "~0.3.3",
+    "grunt-contrib-watch": "~0.6.1",
   }
 }
