move files to lib folder

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "main": "./lib",
   "scripts": {
     "test": "mocha --require test/bootstrap.js --compilers coffee:coffee-script/register --recursive test/unit"
   },
