add license field to package.json

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/keis/rapidus.git"
   },
   "author": "David Keijser <keijser@gmail.com",
+  "license": "MIT",
   "scripts": {
     "test": "mocha --require test/bootstrap.js --compilers coffee:coffee-script/register --recursive test/unit"
   },
