--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "grunt": "~0.4.5",
     "grunt-docco": "~0.3.3",
     "grunt-contrib-watch": "~0.6.1"
+  },
+  "dependencies": {
+    "dateformat": "^1.0.8-1.2.3"
   }
 }
