--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "license": "MIT",
   "scripts": {
     "test": "mocha --require test/bootstrap.js --compilers coffee:coffee-script/register --recursive test/unit",
-    "bench": "coffee -c test/benchmark.coffee ; matcha test/benchmark.js"
+    "bench": "coffee -c test/benchmark.coffee ; matcha test/benchmark.js",
+    "lint": "eslint lib test"
   },
   "devDependencies": {
     "chai": "^1.9.1",
     "coffee-script": "^1.7.1",
     "coveralls": "^2.11.1",
+    "eslint": "^0.17.1",
     "grunt": "^0.4.5",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-docco": "^0.3.3",
