--- a/.eslintrc
+++ b/.eslintrc
@@ -16,3 +16,5 @@
     eqeqeq: [2, allow-null]
     no-underscore-dangle: 0
     no-use-before-define: 0
+    comma-style: [2, first]
+    indent: [2, 2]
