--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
   "author": "David Keijser <keijser@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "lint": "eslint lib test",
     "test": "mocha --require test/bootstrap.js --compilers coffee:coffee-script/register --recursive test/unit",
     "bench": "coffee -c test/benchmark.coffee ; matcha test/benchmark.js",
-    "lint": "eslint lib test"
+    "coverage": "istanbul cover _mocha --report lcovonly -- --require test/bootstrap.js --compilers coffee:coffee-script/register --recursive test/unit",
+    "billom": "billom package.json \"$npm_package_name\" > package.html",
+    "docs": "docco lib/*.js"
   },
   "devDependencies": {
+    "billom": "^1.0.2",
     "chai": "^1.9.1",
     "coffee-script": "^1.7.1",
     "coveralls": "^2.11.1",
     "eslint": "^0.17.1",
-    "grunt": "^0.4.5",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-docco": "^0.3.3",
     "istanbul": "^0.3.5",
     "matcha": "^0.6.0",
     "mocha": "^2.0.1",
