--- a/.eslintrc
+++ b/.eslintrc
@@ -16,5 +16,6 @@
     eqeqeq: [2, allow-null]
     no-underscore-dangle: 0
     no-use-before-define: 0
+    no-return-assign: 0
     comma-style: [2, first]
     indent: [2, 2]
