--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "istanbul": "^0.3.5",
     "matcha": "^0.6.0",
     "mocha": "^2.0.1",
+    "rewire": "^2.3.3",
     "sinon": "^1.10.0"
   },
   "dependencies": {
-    "dateformat": "^1.0.11"
+    "dateformat": "^1.0.11",
+    "object-assign": "^3.0.0",
+    "readable-stream": "^1.0.33"
   }
 }
