--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "dateformat": "^1.0.11",
     "object-assign": "^3.0.0",
-    "readable-stream": "^1.0.33"
+    "readable-stream": "^1.0.33",
+    "through2": "^0.6.5"
   }
 }
