--- a/package.json
+++ b/package.json
@@ -32,8 +32,12 @@
   },
   "dependencies": {
     "dateformat": "^1.0.11",
+    "dullstring": "^1.0.1",
     "object-assign": "^3.0.0",
     "readable-stream": "^1.0.33",
+    "record-sink": "^2.0.0",
+    "sculpt": "^0.1.7",
+    "terminus": "^1.0.12",
     "through2": "^0.6.5"
   }
 }
