--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "sinon": "^1.10.0"
   },
   "dependencies": {
-    "dateformat": "^1.0.11",
     "dullstring": "^1.0.1",
+    "log-record": "^1.0.0",
     "object-assign": "^3.0.0",
     "readable-stream": "^1.0.33",
     "record-sink": "^2.0.0",
