--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "readable-stream": "^1.0.33",
     "record-sink": "^2.0.0",
     "sculpt": "^0.1.7",
+    "standard-levels": "^1.0.0",
     "terminus": "^1.0.12",
     "through2": "^0.6.5"
   }
