--- a/package.json
+++ b/package.json
@@ -35,10 +35,8 @@
   "dependencies": {
     "dullstring": "^1.0.1",
     "log-record": "^1.0.0",
-    "object-assign": "^3.0.0",
+    "mlogy": "^1.0.2",
     "record-sink": "^2.0.0",
-    "sculpt": "^0.1.7",
-    "standard-levels": "^1.0.0",
-    "terminus": "^1.0.12"
+    "sculpt": "^0.1.7"
   }
 }
