--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: node_js
+sudo: false
 node_js:
     - "0.10"
+    - "0.12"
+    - "4.0"
+    - "4.1"
 script: npm run coverage
 after_success:
     cat coverage/lcov.info | node_modules/.bin/coveralls
